--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,8 +35,8 @@ force_ltr no
 #: "WORLD HELLO", and if you try to select a substring of an RTL-
 #: shaped string, you will get the character that would be there had
 #: the the string been LTR. For example, assuming the Hebrew word
-#: ירושלים, selecting the character that on the screen appears to be ם
-#: actually writes into the selection buffer the character י.  kitty's
+#: ÃÂÃÂ¨ÃÂÃÂ©ÃÂÃÂÃÂ, selecting the character that on the screen appears to be ÃÂ
+#: actually writes into the selection buffer the character ÃÂ.  kitty's
 #: default behavior is useful in conjunction with a filter to reverse
 #: the word order, however, if you wish to manipulate RTL glyphs, it
 #: can be very challenging to work with, so this option is provided to
@@ -92,7 +92,7 @@ disable_ligatures never
 #: is useful as some fonts might have features worthwhile in a
 #: terminal. For example, Fira Code Retina includes a discretionary
 #: feature, zero, which in that font changes the appearance of the
-#: zero (0), to make it more easily distinguishable from Ø. Fira Code
+#: zero (0), to make it more easily distinguishable from ÃÂ. Fira Code
 #: Retina also includes other discretionary features known as
 #: Stylistic Sets which have the tags ss01 through ss20.
 
@@ -174,14 +174,14 @@ cursor_underline_thickness 2.0
 
 #: Defines the thickness of the underline cursor (in pts)
 
-cursor_blink_interval 0
+cursor_blink_interval 0.3
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 8.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -654,7 +654,7 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " ┇"
+tab_separator " Ã¢ÂÂ"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -709,11 +709,11 @@ tab_bar_background none
 #: Color scheme {{{
 
 background #f6eacc
-foreground #373e4c
+foreground #4c3c38
 
 #: The foreground and background colors
 
-background_opacity 1.0
+background_opacity 0.5
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1009,7 +1009,7 @@ macos_option_as_alt no
 
 macos_hide_from_tasks no
 
-#: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
+#: Hide the kitty window from running tasks (Ã¢ÂÂ+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
 macos_quit_when_last_window_closed no
